--- a/src/main/reactfront/src/components/member/login/Login.css
+++ b/src/main/reactfront/src/components/member/login/Login.css
@@ -1,4 +1,4 @@
-.page{
+.login_page{
     position: absolute;
     top: 0;
     bottom: 0;
@@ -17,7 +17,7 @@
     flex-direction: column;
 }
 
-.titleWrap{
+.login_titleWrap{
     margin-top: 50px;
     font-size: 20px;
     font-weight: 700;
@@ -25,18 +25,18 @@
     text-align: center;
 }
 
-.contentWrap{
+.login_contentWrap{
     margin-top: 60px;
     flex:1;
 }
 
-.inputTitle{
+.login_inputTitle{
     font-size: 12px;
     font-weight: 600;
     color: #262626;
 }
 
-.inputWrap{
+.login_inputWrap{
     display: flex;
     border-radius: 8px;
     padding: 16px;
@@ -45,11 +45,11 @@
     border: 1px solid #e2e0e0;
 }
 
-.inputWrap:focus-within{
+.login_inputWrap:focus-within{
     border: 1px solid #A3C6C4;
 }
 
-.input{
+.login_input{
     width: 100%;
     outline: none;
     border: none;
@@ -58,17 +58,17 @@
     font-weight: 400;
 }
 
-.input::placeholder{
+.login_input::placeholder{
     color: #dadada;
 }
 
-.errorMessageWrap{
+.login_errorMessageWrap{
     margin-top: 8px;
     color: #ef0000;
     font-size:12px;
 }
 
-.btnBottom{
+.login_btnBottom{
     width: 100%;
     height: 48px;
     border: none;
@@ -79,15 +79,15 @@
     cursor: pointer;
 }
 
-.btnBottom:disabled{
+.login_btnBottom:disabled{
     background-color: #dadada;
     color: white;
 }
 
-.btnSignup{
+.login_btnSignup{
     background-color: #6C7A89;
 }
 
-.btnSignin{
+.login_btnSignin{
     background-color: #354649;
 }
